crates/rstest-bdd-macros/tests/ui/datatable_duplicate_attr.stderr
error: invalid step function signature: duplicate `#[datatable]` attribute. Hint: use `#[given] fn name(ctx: &StepContext, ... )` and valid fixtures.
 --> tests/ui/datatable_duplicate_attr.rs:6:35
  |
6 | fn step(#[datatable] #[datatable] table: Vec<Vec<String>>) {}
  |                                   ^^^^^

error: duplicate `#[datatable]` attribute
 --> tests/ui/datatable_duplicate_attr.rs:6:35
  |
6 | fn step(#[datatable] #[datatable] table: Vec<Vec<String>>) {}
  |                                   ^^^^^
